release/1.16.5/VERSION.md
# 1.16.5

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.16.5```   |
| Release Time   | ```2021-01-14T16:05:32+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.16```   |
| sha1   | ```f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2```   |
| size   | ```295227```   |
| total size  | ```334438503```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2/1.16.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```37fd3c903861eeff3bc24b71eed48f828b5269c8```   |
| size   | ```17547153```   |
| url       | ```https://piston-data.mojang.com/v1/objects/37fd3c903861eeff3bc24b71eed48f828b5269c8/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```1b557e7b033b583cd9f66746b7a9ab1ec1673ced```   |
| size   | ```37962360```   |
| url       | ```https://piston-data.mojang.com/v1/objects/1b557e7b033b583cd9f66746b7a9ab1ec1673ced/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |